[gd_scene load_steps=4 format=3 uid="uid://xy1fadjc5rwx"]

[ext_resource type="Texture2D" uid="uid://c20tligm8hcrg" path="res://Art/PlayerBox.png" id="1_sxvnm"]
[ext_resource type="Script" path="res://PlayerPanel.gd" id="2_cm5au"]
[ext_resource type="Script" path="res://UI/ProfileMenu.gd" id="3_m7k2y"]

[node name="PlayerPanel" type="NinePatchRect"]
custom_minimum_size = Vector2(288, 136)
anchors_preset = -1
anchor_right = 0.25
anchor_bottom = 0.209877
texture = ExtResource("1_sxvnm")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("2_cm5au")
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ProfileSelection" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_m7k2y")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ProfileSelection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ProfileSelection/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ready?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/ProfileSelection/VBoxContainer"]
layout_mode = 2
text = "GO"

[node name="PanelAnchors" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="PanelAnchors"]
layout_mode = 1
anchors_preset = 0

[node name="Control2" type="Control" parent="PanelAnchors"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="Control3" type="Control" parent="PanelAnchors"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Control4" type="Control" parent="PanelAnchors"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Control5" type="Control" parent="PanelAnchors"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Control6" type="Control" parent="PanelAnchors"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[connection signal="pressed" from="MarginContainer/ProfileSelection/VBoxContainer/Button" to="MarginContainer/ProfileSelection" method="_on_button_pressed"]
